# zero-optax

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLIANCE.md  OPTAX_TODO.md  PLAN.md  README.md  SEMANTIC_PLAN.md  TEST_OG_PLAN.md  check_docs.py  coverage.json  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: check_api_compliance.py  check_compliance.py  check_deps.py  generate_api_snapshot.py  update_badges.py
src/zero_optax/: __init__.py  base.py  combine.py
src/zero_optax/losses/: __init__.py  classification.py  fenchel_young.py  ranking.py  regression.py  sequence.py  sparsemax.py
src/zero_optax/optimizers/: __init__.py  adagrad.py  adam.py  adamw.py  lamb.py  lars.py  lion.py  sgd.py
src/zero_optax/schedules/: __init__.py  base.py  cycle.py  inject.py  schedule.py  warmup.py
tests/: conftest.py  optax_api_snapshot.json  test_api_parity.py  test_losses.py  test_optimizers.py  test_reference_optax.py  test_schedules.py  utils.py
