[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "zero_optax"
version = "0.2.4"
description = "A clean implementation of optax API"
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=zero_optax --cov-fail-under=80"


[tool.ruff.lint]
ignore = ['E402', 'F401', 'F841', 'E741']


[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/zero_optax"]
omit = ["tests/*"]
